# statica

./: README.md  benchmark_creation.py  benchmark_memory.py  justfile  pyproject.toml  statica.code-workspace
.github/workflows/: test.yml
docs/: decision-inheritance-over-decorators.md
statica/: __init__.py  config.py  core.py  validation.py
tests/: test_aliasing.py  test_cast_edge_cases.py  test_config.py  test_constraints_edge_cases.py  test_default_field.py  test_descriptor.py  test_inheritance.py  test_round_trip.py  test_statica.py  test_use_cases.py  test_validate_or_raise.py  test_validation.py  test_validators.py
