[project]
name = "statica"
version = "1.5.0"
description = "A minimalistic data validation library"
readme = "README.md"
authors = [{ name = "Marcel Kröker", email = "kroeker.marcel@gmail.com" }]
license = { file = "LICENSE" }
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.11, <3.15"


########################################################################################
#### MARK: Dependencies


dependencies = []


[dependency-groups]
dev = [
	"pyrefly ~= 1.1.0",
	"pyinstrument ~= 5.1.0",
	"pytest-cov ~= 7.1.0",
	"ruff ~= 0.15.0",
]


########################################################################################
#### MARK: Packaging


[tool.setuptools]
packages = ["statica"]
license-files = [] # Workaround for https://github.com/astral-sh/uv/issues/9513


[tool.uv]
package = true


########################################################################################
#### MARK: Ruff


[tool.ruff]
show-fixes = true
line-length = 100


[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"ANN202", # Missing return type annotation for private function
	"ANN401", # Dynamically typed expressions (typing.Any) are disallowed
	"D", # docstrings
	"ERA001", # Found commented-out code
	"INP001", # File is part of an implicit namespace package. Add an `__init__.py`.
	"S101", # Use of `assert` detected
	"T201", # `print` found
	"W191", # indentation contains tabs
	"PLR0913", # Too many arguments in function definition (6 > 5)
	"COM812", # Missing trailing comma
]


[tool.ruff.format]
indent-style = "tab"
quote-style = "double"


########################################################################################
#### MARK: Testing

[tool.coverage.report]
omit = [
    "benchmark_*.py",
]
exclude_also = [
	"if TYPE_CHECKING:",
	'if __name__ == "__main__":',
]


########################################################################################
#### MARK: Pyrefly

[tool.pyrefly]
python-version = "3.14"
preset = "strict"
search_path = ["."]
min-severity = "warn"
